# WaveChat

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  pyproject.toml
apps/account/: admin.py  models.py  service.py  urls.py  views.py
apps/chat/: admin.py  apps.py  consumers.py  decorator.py  models.py  redis_cli.py  routing.py  service.py  urls.py  validators.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: chat.conf  nginx.conf
static/: tailwind.config.js
static/css/: input.css  output.css
static/js/: MessageBubble.js  auth.js  browser-image-compression.js  cache.js  chatListManager.js  config.js  emojis.js  fileUploader.js  main.js  normalize.js  reaction.js  replyManager.js  scrollControler.js  state.js  theme.js
statics/: base.css  chat.css  chat.js  imageManager.js  normalize.js
templates/: base.html  chat.html
utils/: custom_logger.py  load_env.py
